# petshop

./: .coveragerc  .env.test  ADMIN_API_AUDIT_REPORT.md  AGEMTS.md  AGENTS.md  Dockerfile  FINAL_ACCEPTANCE_REPORT.md  MIGRATION_REPORT.md  PasswordEncoder.java  README.md  cg.sql  database-schema-updates.sql  database-sharding-solution.md  database-test-data-documentation.md  database-test-data.sql  database.sql  docker-compose.yml  mybatis-plus-analysis-report.md  petshop_423.sql  petshop_424.sql  platform-admin-api-integration-report.md  platform-admin-test-data-check-report.md  pom.xml  pyproject.toml  pytest.ini  requirements.txt  run_tests.bat  run_tests.py  tasks.md  test-data-insert.sql  test-data.sql  test_config.example.json  业务逻辑.md  前端页面访问教程文档.md  商家端页面访问指南.md  平台端页面访问指南.md  数据库表结构和字段.md  测试账号.txt  运行前端.txt
cg-vue/: README.md  (+5 more)
petshop-rust/: .env  Cargo.toml  diesel.toml
petshop-rust/migrations/20240101000001_create_users/: up.sql
petshop-rust/migrations/20240101000002_create_admins/: up.sql
petshop-rust/migrations/20240101000003_create_merchants/: up.sql
petshop-rust/migrations/20240101000004_create_services/: up.sql
petshop-rust/migrations/20240101000005_create_products/: up.sql
petshop-rust/migrations/20240101000006_create_pets/: up.sql
petshop-rust/migrations/20240101000007_create_appointments/: up.sql
petshop-rust/migrations/20240101000008_create_product_orders/: down.sql  up.sql
petshop-rust/migrations/20240101000009_create_product_order_items/: down.sql  up.sql
petshop-rust/src/: lib.rs  main.rs
petshop-rust/tests/: README.md
(+1243 files in other folders)
